--- a/index.html
+++ b/index.html
@@ -27,54 +27,70 @@
             </ul>
             <table>
                 <tr>
-                    <th>Pastry</th>
-                    <th>Custard</th>
+                    <th colspan="2">Pastry</th>
+                    <th colspan="2">Custard</th>
                 </tr>
                 <tr>
-                    <td><amount>230g</amount> plain flour</td>
-                    <td><amount>210g</amount> white sugar</td>
+                    <td><amount>230g</amount></td>
+                    <td>plain flour</td>
+                    <td><amount>210g</amount></td>
+                    <td>white sugar</td>
                 </tr>
                 <tr>
-                    <td><amount>¼-½ tsp</amount> fine salt, depending on taste</td>
-                    <td><amount>1</amount> cinnamon stick, or 2 if short</td>
+                    <td><amount>¼-½ tsp</amount></td>
+                    <td>fine salt, depending on taste</td>
+                    <td><amount>1</amount></td>
+                    <td>cinnamon stick, or 2 if short</td>
                 </tr>
                 <tr>
-                    <td><amount>120g</amount> cold water</td>
-                    <td>Peel of <amount>1</amount> unwaxed lemon, in strips</td>
+                    <td><amount>120g</amount></td>
+                    <td>cold water</td>
+                    <td><amount>1</amount></td>
+                    <td>unwaxed lemon peel, in strips</td>
                 </tr>
                 <tr>
-                    <td><amount>150g</amount> cold unsalted butter</td>
-                    <td><amount>500ml</amount> whole milk</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><amount>20g</amount> unsalted butter, cubed</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><amount>35g</amount> plain flour</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><amount>2</amount> tsp cornflour</td>
+                    <td><amount>150g</amount></td>
+                    <td>cold unsalted butter</td>
+                    <td><amount>500ml</amount></td>
+                    <td>whole milk</td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><amount>5</amount> egg yolks</td>
+                    <td></td>
+                    <td><amount>20g</amount></td>
+                    <td>unsalted butter, cubed</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td><amount>35g</amount></td>
+                    <td>plain flour</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td><amount>2</amount></td>
+                    <td>tsp cornflour</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td><amount>5</amount></td>
+                    <td>egg yolks</td>
                 </tr>
             </table>
-            <p>
-                very interesting and definitely not padding:
-            </p>
+            <p>very interesting and definitely not padding:</p>
             <div id="anchors">
                 <!-- <a href="#1">Step 1</a> -->
             </div>
+            <h3>Step 1</h3>
             <p id="p1">
                 You will need jam tart/fairy cake tins or, better still, pastel de nata tins, plus
                 oil to grease them. Start with the syrup for the custard. Put the sugar in a small
                 pan with 150ml water, half the cinnamon stick and half the lemon strips. Bring to a
                 boil and cook until slightly thickened – it’s ready when it hits about 107C.
             </p>
+            <h3>Step 2</h3>
             <p id="p2">
                 If you don’t have a thermometer, run a teaspoon under cold water, then put a little
                 syrup on to it and, when it’s cool enough, pinch it between two fingers: it should
@@ -83,6 +99,7 @@
                 briefly. Add the water, and stir with one hand until it just comes together into a
                 dry dough.
             </p>
+            <h3>Step 3</h3>
             <p id="p3">
                 Turn out on to a clean surface and knead until smooth. If the dough is stubbornly
                 flaky, wet your hands to do this, but try not to add more water unless it’s
@@ -90,27 +107,32 @@
                 small, flat tiles. Cut out two rectangles of greaseproof paper, and draw a 15cm x
                 20cm rectangle in the middle of one of them.
             </p>
+            <h3>Step 4</h3>
             <p id="p4">
                 Arrange the tiles of butter in a tight rectangle in the centre of the other piece of
                 paper, then put the other sheet on top drawing side up and roll out the butter
                 between the two sheets until it roughly fills the drawn rectangle.
             </p>
+            <h3>Step 5</h3>
             <p id="p5">
                 Put the butter and its paper in the fridge. Roll out the dough on a lightly floured
                 surface to about the same size as the butter rectangle, then, keeping this central
                 rectangle thicker, roll or stretch out the sides so you end up with a cross shape,
                 with four thin arms and a thick, butter-sized rectangle in the centre.
             </p>
+            <h3>Step 6</h3>
             <p id="p6">
                 Peel the paper off the butter, then lay it in the centre of the cross and fold the
                 arms over the top, so they completely enclose the butter.
             </p>
+            <h3>Step 7</h3>
             <p id="p7">
                 Roll out the dough rectangle to about three times its original length, then fold the
                 top third down into the middle and the bottom third up over the top. Turn the dough
                 90 degrees, then repeat the roll and fold process. Wrap and chill for 20 minutes,
                 then roll out for a final time to a ½cm-thick rectangle that’s about 20cm x 35cm.
             </p>
+            <h3>Step 8</h3>
             <p id="p8">
                 With the long side facing you, roll up very tightly into a long sausage and wrap
                 well (you may find it easier to cut it in two before wrapping). Chill for at least
@@ -119,6 +141,7 @@
                 then take off the heat and leave to infuse for at least 30 minutes. Meanwhile, put
                 the flours in a heatproof jug.
             </p>
+            <h3>Step 9</h3>
             <p id="p9">
                 Remove the flavourings from the infused milk, then pour a little of it into the
                 flour jug, whisking to dissolve the flours, until you have a smooth paste, then
@@ -133,23 +156,32 @@
                 inside to heat up. Lightly grease your nata tins or shallow fairy cake/jam tart
                 tins.
             </p>
+            <h3>Step 10</h3>
             <p id="p10">
                 Cut the pastry into roughly 17g slices, put each one in a tin or mould and use damp
                 fingers to press it all the way up the sides and slightly proud of the top. Be
                 careful not to squash the thicker top edge, because this will form the rim. Return
                 to the fridge for 20 minutes.
             </p>
+            <h3>Step 11</h3>
             <p id="p11">
                 Beat the egg yolks into the custard and fill the cases by three-quarters with
                 custard.
             </p>
+            <h3>Step 12</h3>
             <p id="p12">
                 Working quickly, put the tins on the hot sheets and bake for about 10 minutes, until
                 the pastry is dark golden and the custard starting to brown in spots – you’ll need
                 to judge by eye when they’re ready, because this very much depends on your oven.
             </p>
+            <h3>Step 13</h3>
             <p id="p13">Brush lightly with the reserved syrup, if using, while still warm.</p>
-            <a href="https://www.theguardian.com/food/2023/mar/11/how-to-make-the-perfect-pastel-de-nata-recipe-felicity-cloake" target="_blank">source</a>
+            <h3>Reference: </h3>
+            <a
+                href="https://www.theguardian.com/food/2023/mar/11/how-to-make-the-perfect-pastel-de-nata-recipe-felicity-cloake"
+                target="_blank"
+                >source</a
+            >
         </div>
         <script>
             const totalParagraphsWithAnchors = 13;
@@ -162,12 +194,12 @@
 
                 let jumpedParagraph = document.querySelector(id);
 
-                jumpedParagraph.classList.add('flash');
+                jumpedParagraph.classList.add("flash");
 
                 setTimeout(() => {
-                    jumpedParagraph.classList.remove('flash');  
-                }, 1000);
-            }
+                    jumpedParagraph.classList.remove("flash");
+                }, 2000);
+            };
 
             for (let x = 1; x <= totalParagraphsWithAnchors; x++) {
                 let newAnchor = document.createElement("a");
@@ -176,7 +208,6 @@
                 newAnchor.onclick = clickedAnchor;
                 anchorContainer.appendChild(newAnchor);
             }
-
         </script>
     </body>
 </html>
