--- a/Auftrag 3/index.html
+++ b/Auftrag 3/index.html
@@ -9,7 +9,22 @@
     </head>
     <body>
         <div id="header-template"></div>
-        <main></main>
+        <main>
+            <h1> Welcome to my Portfolio </h1>
+            <p>
+                This is a collection of my schoolwork, including projects and
+                contact information.
+            </p>
+            <section class="projects">
+                <h2>Projects</h2>
+                <ul>
+                    <li><a href="project/#/1">Project 1</a></li>
+                    <li><a href="project/#/2">Project 2</a></li>
+                    <li><a href="project/#/3">Project 3</a></li>
+                </ul>
+
+            </section>
+        </main>
         <div id="footer-template"></div>
     </body>
 </html>
