--- a/Auftrag 3/project/index.html
+++ b/Auftrag 3/project/index.html
@@ -6,10 +6,11 @@
         <title>Project</title>
         <link rel="stylesheet" href="/styles.css" />
         <script defer src="/hf.js"></script>
+        <script defer src="/project/project.js"></script>
     </head>
     <body>
         <div id="header-template"></div>
-        <main></main>
+        <main id="project-view"></main>
         <div id="footer-template"></div>
     </body>
 </html>
