--- a/Auftrag 3/project/index.html
+++ b/Auftrag 3/project/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Project</title>
-        <link rel="stylesheet" href="/styles.css" />
-        <script defer src="/hf.js"></script>
-        <script defer src="/project/project.js"></script>
+        <link rel="stylesheet" href="../styles.css" />
+        <script defer src="../hf.js"></script>
+        <script defer src="project.js"></script>
     </head>
     <body>
         <div id="header-template"></div>
