--- a/Auftrag 3/contact/index.html
+++ b/Auftrag 3/contact/index.html
@@ -5,11 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Contact</title>
         <link rel="stylesheet" href="../styles.css" />
-        <script defer src="../hf.js"></script>
+        <script src="../hf.js">
+        </script>
     </head>
     <body>
         <div id="header-template"></div>
         <main></main>
         <div id="footer-template"></div>
+        <script>
+            window.loadTemplateWithPath("../");
+        </script>
     </body>
 </html>
