--- a/Auftrag 3/index.html
+++ b/Auftrag 3/index.html
@@ -5,15 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Poopass Shitass Schoolwork</title>
         <link rel="stylesheet" href="styles.css" />
-        <script defer src="hf.js"></script>
+        <script src="hf.js"></script>
     </head>
     <body>
         <div id="header-template"></div>
         <main>
-            <h1> Welcome to my Portfolio </h1>
+            <h1>Welcome to my Portfolio</h1>
             <p>
-                This is a collection of my schoolwork, including projects and
-                contact information.
+                This is a collection of my schoolwork, including projects and contact information.
             </p>
             <section class="projects">
                 <h2>Projects</h2>
@@ -22,9 +21,11 @@
                     <li><a href="project/#/2">Project 2</a></li>
                     <li><a href="project/#/3">Project 3</a></li>
                 </ul>
-
             </section>
         </main>
         <div id="footer-template"></div>
+        <script>
+            window.loadTemplateWithPath("./");
+        </script>
     </body>
 </html>
