--- a/Auftrag 3/project/index.html
+++ b/Auftrag 3/project/index.html
@@ -5,12 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Project</title>
         <link rel="stylesheet" href="../styles.css" />
-        <script defer src="../hf.js"></script>
+        <script src="../hf.js">
+        </script>
         <script defer src="project.js"></script>
     </head>
     <body>
         <div id="header-template"></div>
         <main id="project-view"></main>
         <div id="footer-template"></div>
+        <script>
+            window.loadTemplateWithPath("../");
+        </script>
     </body>
 </html>
