correctly loads header/footer

--- a/Auftrag 3/contact/index.html
+++ b/Auftrag 3/contact/index.html
@@ -13,7 +13,7 @@
         <main></main>
         <div id="footer-template"></div>
         <script>
-            window.loadTemplateWithPath("../");
+            window.loadTemplateWithPath("..");
         </script>
     </body>
 </html>
