--- a/Auftrag 3/project/index.html
+++ b/Auftrag 3/project/index.html
@@ -14,7 +14,7 @@
         <main id="project-view"></main>
         <div id="footer-template"></div>
         <script>
-            window.loadTemplateWithPath("../");
+            window.loadTemplateWithPath("..");
         </script>
     </body>
 </html>
