--- a/Auftrag 3/index.html
+++ b/Auftrag 3/index.html
@@ -25,7 +25,7 @@
         </main>
         <div id="footer-template"></div>
         <script>
-            window.loadTemplateWithPath("./");
+            window.loadTemplateWithPath(".");
         </script>
     </body>
 </html>
