--- a/Auftrag 3/contact/index.html
+++ b/Auftrag 3/contact/index.html
@@ -10,7 +10,11 @@
     </head>
     <body>
         <div id="header-template"></div>
-        <main></main>
+        <main>
+            <div>
+                <img class="profile-image" width=""/> 
+            </div>
+        </main>
         <div id="footer-template"></div>
         <script>
             window.loadTemplateWithPath("..");
