--- a/Auftrag 3/hf/header.html
+++ b/Auftrag 3/hf/header.html
@@ -1,4 +1,4 @@
 <header>
-    <a href="/">Home</a>
-    <a href="/contact">Contact</a>
+    <a id="home">Home</a>
+    <a id="contact">Contact</a>
 </header>
