--- a/Auftrag 3/contact/index.html
+++ b/Auftrag 3/contact/index.html
@@ -12,8 +12,11 @@
         <div id="header-template"></div>
         <main>
             <div>
-                <img class="profile-image" width=""/> 
+                <img class="profile-image"/> 
             </div>
+            <form class="contact-form">
+                <input >
+            </form>
         </main>
         <div id="footer-template"></div>
         <script>
