started contact, made header links dynamic, projects page

--- a/projekt/contact/index.html
+++ b/projekt/contact/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Contact</title>
         <link rel="stylesheet" href="../styles.css" />
+        <link rel="stylesheet" href="./contact.css">
         <script src="../hf.js">
         </script>
     </head>
@@ -14,8 +15,15 @@
             <div>
                 <img class="profile-image"/> 
             </div>
-            <form class="contact-form">
-                <input >
+            <h2>Stay notified for my latest projects!</h2>
+            <form class="contact-form" >
+                <label>First Name</label>
+                <input type="text"><br>
+                <label>Last Name</label>
+                <input type="text"><br>
+                <label>Email *</label>
+                <input type="email"><br>
+                <input type="button" value="Keep me notified!">
             </form>
         </main>
         <div id="footer-template"></div>
