--- a/projekt/project/index.html
+++ b/projekt/project/index.html
@@ -11,7 +11,10 @@
     </head>
     <body>
         <div id="header-template"></div>
-        <main id="project-view"></main>
+        <main id="project-view">
+            Test Test
+            <h1>Test test</h1>
+        </main>
         <div id="footer-template"></div>
         <script>
             window.loadTemplateWithPath("..");
