--- a/projekt/index.html
+++ b/projekt/index.html
@@ -13,7 +13,45 @@
             <h1>Welcome to my Portfolio</h1>
             <p>
                 This is a collection of my schoolwork, including projects and contact information.
-            </p>
+            </p>        
+            <section>
+                <h2>Projects</h2>
+                <p>
+                    <a href="project/index.html">View my projects</a>
+                </p>
+                <p>
+                    Here are some of my newer projects I'm collecting ideas for:
+                </p>
+                <ul class="project-preview-list">
+                    <li class="project-preview">
+                        <a href="project/index.html#/8">
+                            <img src="public/project_8.jpg" alt="Project 8 preview" class="project-preview-img" />
+                            <div class="project-preview-info">
+                                <strong>Project 8</strong>
+                                <p>Short description for Project 8.</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-preview">
+                        <a href="project/index.html#/9">
+                            <img src="public/project_9.jpg" alt="Project 9 preview" class="project-preview-img" />
+                            <div class="project-preview-info">
+                                <strong>Project 9</strong>
+                                <p>Short description for Project 9.</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-preview">
+                        <a href="project/index.html#/10">
+                            <img src="public/project_10.jpg" alt="Project 10 preview" class="project-preview-img" />
+                            <div class="project-preview-info">
+                                <strong>Project 10</strong>
+                                <p>Short description for Project 10.</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </section>
             
         </main>
         <div id="footer-template"></div>
