--- a/projekt/contact/index.html
+++ b/projekt/contact/index.html
@@ -13,17 +13,18 @@
         <div id="header-template"></div>
         <main>
             <div>
-                <img class="profile-image"/> 
+                <img class="profile-image" src="./images/profile-photo.jpg" /> 
             </div>
-            <h2>Stay notified for my latest projects!</h2>
-            <form class="contact-form" >
-                <label>First Name</label>
-                <input type="text"><br>
-                <label>Last Name</label>
-                <input type="text"><br>
-                <label>Email *</label>
-                <input type="email"><br>
-                <input type="button" value="Keep me notified!">
+            <h2>Contact Information</h2>
+            <div class="contact-info">
+                <p><strong>Name:</strong> Miguel Seara Marchioro</p>
+                <p><strong>Email:</strong> miguelseara07@gmail.com</p>
+                <p><strong>Phone:</strong> +41 77 984 64 27</p>
+            </div>
+            <form class="subscribe-form" style="margin-top:2rem;">
+                <label for="subscribe-email"><strong>Stay updated with my latest projects</strong></label><br>
+                <input type="email" id="subscribe-email" name="subscribe-email" placeholder="Enter your email" required style="margin-top:0.5rem;">
+                <input type="submit" value="Subscribe" style="margin-left:0.5rem;">
             </form>
         </main>
         <div id="footer-template"></div>
